fix nav grid spacing

--- a/app/assets/stylesheets/nav.css
+++ b/app/assets/stylesheets/nav.css
@@ -11,13 +11,13 @@
 
 .global-nav-proj-form{
     display: grid;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: 33.33% 33.33% 33.33%;
     width: 100%;
 }
 
 .global-nav{
     display: grid;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: 33.33% 33.33% 33.33%;
     width: 100%;
     border-bottom: 1px solid #E8E8E8;
 }
